[RisingUI] Revamp QS Panel UI
Designed by https://github.com/not-ayan

Implemented by the risingOS team 2024

honest references (credits and big thanks to the authors):
https://github.com/2hamed/VerticalSlider
https://github.com/minaripenguin/android_frameworks_base/commit/ce7ed59903a1db8f56b85a145ccb5662819cde9c

Change-Id: I8e04593166cc730b0bf9969e095a106a01a57857
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/packages/SystemUI/res/layout/combined_qs_header.xml
+++ b/packages/SystemUI/res/layout/combined_qs_header.xml
@@ -162,4 +162,17 @@ frame when animating QS <-> QQS transition
 
     </FrameLayout>
 
+    <LinearLayout
+        android:id="@+id/qs_controls_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/qs_controls_center_height"
+        app:layout_constraintStart_toStartOf="@id/begin_guide"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/date"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <include layout="@layout/qs_controls_layout" />
+
+    </LinearLayout>
+
 </com.android.systemui.util.NoRemeasureMotionLayout>
