--- a/packages/SystemUI/res/values/integers.xml
+++ b/packages/SystemUI/res/values/integers.xml
@@ -47,4 +47,6 @@
     <integer name="max_notif_icons_on_lockscreen">3</integer>
     <!-- Maximum number of notification icons shown in the status bar (excluding overflow dot) -->
     <integer name="max_notif_static_icons">4</integer>
+    
+    <integer name="media_player_fade">55</integer>
 </resources>
