--- a/packages/SystemUI/res/values/qsthemes_strings.xml
+++ b/packages/SystemUI/res/values/qsthemes_strings.xml
@@ -4,4 +4,5 @@
     <string name="calculator">Calculator</string>
     <string name="gallery">Gallery</string>
     <string name="no_default_app_found">No default %1$s app found</string>
+    <string name="no_media_playing">No Media Playing</string>
 </resources>
