--- a/packages/SystemUI/res/xml/qs_header.xml
+++ b/packages/SystemUI/res/xml/qs_header.xml
@@ -37,26 +37,23 @@
         android:id="@+id/clock">
         <Layout
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/large_screen_shade_header_min_height"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/privacy_container"
-            app:layout_constraintBottom_toBottomOf="@id/carrier_group"
-        />
+            app:layout_constraintBottom_toBottomOf="@id/carrier_group" />
         <Transform
             android:scaleX="@dimen/qqs_expand_clock_scale"
-            android:scaleY="@dimen/qqs_expand_clock_scale"
-            />
+            android:scaleY="@dimen/qqs_expand_clock_scale" />
     </Constraint>
 
     <Constraint
         android:id="@+id/date">
         <Layout
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/new_qs_header_non_clickable_element_height"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/carrier_group"
-        />
+            app:layout_constraintBottom_toTopOf="@id/qs_controls_container" /> 
     </Constraint>
 
     <!-- ShadeHeaderController helps with managing clock width to layout this view -->
@@ -88,6 +85,19 @@
             app:layout_constraintTop_toTopOf="@id/date"
             app:layout_constraintBottom_toBottomOf="@id/date"
             />
+    </Constraint>
+
+    <Constraint
+        android:id="@+id/qs_controls_container">
+        <Layout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/date"
+            app:layout_constraintBottom_toBottomOf="parent" />
+        <PropertySet
+            android:alpha="1" />
     </Constraint>
 
 </ConstraintSet>
