[RisingUI] Revamp QS Panel [2/n]
* UX/UI improvements and fixes

Change-Id: I864ca3cffbc923ad0ee2ee0cd203d5a1008da6c5
Signed-off-by: minaripenguin <minaripenguin@users.noreply.github.com>

--- a/packages/SystemUI/res/layout/qs_panel.xml
+++ b/packages/SystemUI/res/layout/qs_panel.xml
@@ -42,6 +42,8 @@
             android:paddingTop="@dimen/custom_qs_panel_padding_top"
             android:clipToPadding="false"
             android:clipChildren="false">
+            
+             <include layout="@layout/qs_controls_layout" />
 
             <include layout="@layout/qs_footer_impl" />
 
